--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ h1{
     display: block;
     width: 800px;
     margin: 100px auto;
+    font-family: cursive;
 }
 h1:hover{
     background-color: rgb(193, 29, 68);
