--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,29 @@
 h1{
     text-align: center;
-    font-size: 4rem;
+    font-size: 2rem;
     font-weight: bold;
     color: rgb(187, 120, 120);
     background-color: rgb(99, 19, 35);
-    display: block;
-    width: 800px;
-    margin: 100px auto;
+    display: inline-block;
+    width: auto;
+    margin-top: 70px;
     font-family: cursive;
+    margin-left: 41%;
+    margin-right: 50px;
+    padding: 10px;
 }
-h1:hover{
-    background-color: rgb(193, 29, 68);
-}
+
 .web{
     line-height:8rem;
     text-align: center;
     color: rgb(178, 14, 14);
     font-size: large;
+    margin-right: 2%;
 }
 .p1{
     display: inline-block;
     font-size: small;
     width: auto;
-    align-items: center;
     margin-left: 40%;
     margin-right: 50px;
 }
@@ -30,7 +31,6 @@ h1:hover{
     display: inline-block;
     font-size: small;
     width: auto;
-    align-items: center;
 }
 h2{
     text-align: center;
@@ -49,4 +49,32 @@ img{
     display: block;
     width: 100px;
     margin: 0px auto;
+}
+
+.ref{
+    color: white;
+    background-color: rgb(203, 109, 109);
+    display: block;
+    padding: 10px;
+    border: solid;
+    font-size: x-large;
+    border-radius: 20%;
+    margin-left: 46%;
+    margin-top: 20px;
+}
+button:hover{
+    background-color: rgb(193, 29, 68);
+}
+
+.res{
+    color: brown;
+    background-color: rgb(203, 109, 109);
+    display: inline-block;
+    border: solid;
+    border-color: brown;
+    font-size: x-large;
+    border-radius: 20%;
+    margin-left: 40%;
+    margin-top: 40px;
+    padding: 10px;
 }
